Alterações em dados dos filmes, selecionando diferentes e descrição sobre eles.

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://s.aficionados.com.br/imagens/batman-1989_cke.jpg" alt="Batman (1989)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Batman (1989)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>9.0</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -42,21 +42,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Apenas 23 anos depois de seu primeiro filme, o Homem-Morcego retornaria aos cinemas. Primeira produção que pertenceu a um universo cinematográfico, Batman contou com a marcante direção de Tim Burton e trouxe Michael Keaton no papel principal. Com Jack Nicholson fazendo história com sua interpretação do vilão Coringa, o longa mostrou a transformação do personagem no palhaço do crime.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://s.aficionados.com.br/imagens/batman-e-robin-0_cke.jpg" alt="Batman e Robin (1997)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Batman e Robin (1997)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>7.2</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -66,21 +66,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Quarto e último filme da antologia The Batman Motion Picture, Batman e Robin contou com o retorno de Chris O'Donnell para o papel de parceiro do Homem-Morcego, que agora ganhou vida na interpretação de George Cloney.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://s.aficionados.com.br/imagens/batman-begins-0_cke.jpg" alt="Batman Begins (2005)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Batman Begins (2005)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>8.0</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Dando início à franquia que elevaria os filmes do Batman a um nível até então nunca alcançado, Batman Begins trouxe Christian Bale brilhando no papel do Homem-Morcego. O longa reiniciou mais uma vez a história do personagem, mostrando novamente a infância de Bruce Wayne, o assassinato de seus pais, o treinamento ao qual foi submetido e seu recrutamento para a Liga das Sombras.</span>
         </div>
       </div>
     </div>
