--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <main>
     <h2>Filmes Populares</h2>
-    <div class="input-container">
+    <div class="input-containerr">
       <input type="text" name="movie-name" id="movie-name" placeholder="Digite algum filme para pesquisar...">
-      <img src="images/search-icon.svg" alt="Ícone de pesquisa" class="searchIcon">
+      <img src="images/search-icon.svgg" alt="Ícone de pesquisa" class="searchIcon">
     </div>
     <div class="showOnlyFavorites">
       <input type="checkbox" name="onlyFavorites" id="onlyFavorites">
