Simulando bug de dois mexendo no mesmo codigo

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Dando início à franquia que elevaria os filmes do Batman a um nível até então nunca alcançado, Batman Begins trouxe Christian Bale brilhando no papel do Homem-Morcego. O longa reiniciou mais uma vez a história do personagem, mostrando novamente a infância de Bruce Wayne, o assassinato de seus pais, o treinamento ao qual foi submetido e seu recrutamento para a Liga das Sombras.</span>
+          <span>Dando à franquia que elevaria os filmes do Batman a um nível até então nunca alcançado, Batman Begins trouxe Christian Bale brilhando no papel do Homem-Morcego. O longa reiniciou mais uma vez a história do personagem, mostrando novamente a infância de Bruce Wayne, o assassinato de seus pais, o treinamento ao qual foi submetido e seu recrutamento para a Liga das Sombras.</span>
         </div>
       </div>
     </div>
